scheduledreport ui updates

--- a/3/ClientPortal.Web/ClientPortal.Web/Content/portal.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/portal.css
@@ -144,7 +144,7 @@ footer.row {
     overflow-y: auto;
 }
 
-.display-label, .editor-label label {
+.display-label, .editor-label label, .editor-field label {
     font-weight: bold;
 }
 .editor-field, .display-field {
