--- a/3/ClientPortal.Web/ClientPortal.Web/Views/ScheduledReports/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/ScheduledReports/Index.cshtml
@@ -11,7 +11,7 @@
                      new AjaxOptions
                          {
                              InsertionMode = InsertionMode.Replace, UpdateTargetId = "windowScheduledReport", HttpMethod = "GET",
-                             OnBegin = "BeginEditScheduledReport",
+                             OnBegin = "BeginAddScheduledReport",
                              OnSuccess = "EditScheduledReportLoaded"
                          })
     | <a href="#" onclick="RefreshScheduledReportsList(); return false">Refresh</a>
