--- a/3/ClientPortal.Web/ClientPortal.Web/Views/ScheduledReports/_Infrastructure.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/ScheduledReports/_Infrastructure.cshtml
@@ -9,15 +9,18 @@
         });
     }
 
-    function BeginEditScheduledReport() {
+    function BeginAddScheduledReport() {
+        BeginEditScheduledReport("Add");
+    }
+    function BeginEditScheduledReport(addOrEdit) {
         var win = $('#windowScheduledReport').data("kendoWindow");
-        win.setOptions({ width: 600, height: 500 });
+        win.setOptions({ width: 600, height: 500, title: addOrEdit + " Scheduled Report" });
         win.center();
         win.open();
     }
 
     function EditScheduledReport(id) {
-        BeginEditScheduledReport();
+        BeginEditScheduledReport("Edit");
         var url = '@Url.Action("Edit", "ScheduledReports")';
         $.ajax({ url: url, data: { id: id }, cache: false }).done(function (data) {
             $('#windowScheduledReport').html(data);
