--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Contact.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Contact.cshtml
@@ -19,7 +19,7 @@
                     <div style="float: left; width: 65px; padding: 5px; padding-top: 0px; padding-left: 10px;">
                         <img style="border: 2px solid #000;" width="65" src="~/Images/avatar.png">
                     </div>
-                    @contact.FirstName @contact.LastName<text>,</text> @contact.Title<br />
+                    <text>@contact.FirstName @contact.LastName, @contact.Title</text><br />
                     <a href="mailto:@contact.Email">@contact.Email</a>
                 }
             </td>
