--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
@@ -36,7 +36,7 @@
                 @Html.LabelFor(model => model.MetricId)
             </div>
             <div class="editor-field">
-                @Html.DropDownListFor(model => model.MetricId, new SelectList(Enum.GetValues(typeof(ClientPortal.Web.Models.MetricEnum))), new { style = "width:auto" })
+                @Html.DropDownListFor(model => model.MetricId, new SelectList(Enum.GetValues(typeof(ClientPortal.Data.Contexts.Metric))), new { style = "width:auto" })
                 @Html.ValidationMessageFor(model => model.MetricId)
             </div>
 
@@ -44,7 +44,7 @@
                 @Html.LabelFor(model => model.TypeId)
             </div>
             <div class="editor-field">
-                @Html.DropDownListFor(model => model.TypeId, new SelectList(Enum.GetValues(typeof(ClientPortal.Web.Models.GoalTypeEnum))), new { style = "width:auto" })
+                @Html.DropDownListFor(model => model.TypeId, new SelectList(Enum.GetValues(typeof(ClientPortal.Data.Contexts.GoalType))), new { style = "width:auto" })
                 @Html.ValidationMessageFor(model => model.TypeId)
             </div>
 
