--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ClientPortal.Web.Models.GoalVM
 @{
-    List<ClientPortal.Data.Contexts.CakeOffer> offers = ViewBag.Offers;
+    List<ClientPortal.Data.Contexts.Offer> offers = ViewBag.Offers;
     bool isNewGoal = Model.Id < 0;
 }
 
