--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
@@ -193,6 +193,9 @@
             UpdateSpendLineChart();
         });
 
+        drawHeatMap();
+        FillClicksByDevice();
+
         CreateGoalCharts(); @* //defined in DashboardGoals *@
         ResizeDashboardPanelHeights();
     });
