--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_ClicksByDevice.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_ClicksByDevice.cshtml
@@ -26,7 +26,7 @@
         });
     }
 
-    function fillClicksByDevice() {
+    function FillClicksByDevice() {
 
         // Common width of both the grid and the pie chart
         var widgetHeight = 198;
