--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Contact.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Contact.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<ClientPortal.Data.Contexts.Contact>
 
-<h3>Contact</h3>
+@if (ViewBag.ShowTitle) {
+    <h3>Contact</h3>
+}
 
 <div class="panel four columns">
     <table>
