--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Dashboard.cshtml
@@ -63,11 +63,11 @@
 
 <script>
     $(function () {
-        var weeksumDS = CreateSummaryDataSource('@Url.Action("WeekSumData")', false);
-        CreateSummaryGrid(weeksumDS, 'weeksumGrid', 200, 'Week', 0);
+        var weeksumDS = CreateSummaryDataSource('@Url.Action("WeekSumData")', null, false);
+        CreateSummaryGrid(weeksumDS, $('#weeksumGrid'), 200, 'Week', 10, 0, null);
 
-        var monthsumDS = CreateSummaryDataSource('@Url.Action("MonthSumData")', false);
-        CreateSummaryGrid(monthsumDS, 'monthsumGrid', 200, 'Month', 0);
+        var monthsumDS = CreateSummaryDataSource('@Url.Action("MonthSumData")', null, false);
+        CreateSummaryGrid(monthsumDS, $('#monthsumGrid'), 200, 'Month', 10, 0, null);
 
         CreateRevROASChart(weeksumDS, 'weekrevChart', 'Weekly Revenue vs. ROAS Performance');
         CreateOrderCPOChart(weeksumDS, 'weekorderChart', 'Weekly Orders vs. CPO Performance');
@@ -75,11 +75,22 @@
         CreateRevROASChart(monthsumDS, 'monthrevChart', 'Monthly Revenue vs. ROAS Performance');
         CreateOrderCPOChart(monthsumDS, 'monthorderChart', 'Monthly Orders vs. CPO Performance');
 
-        var channelperfDS = CreateSummaryDataSource('@Url.Action("ChannelPerfData")', true);
-        CreateSummaryGrid(channelperfDS, 'channelperfGrid', 350, 'Channel', 2);
+        var channelperfDS = CreateSummaryDataSource('@Url.Action("ChannelPerfData")', null, true);
+        CreateSummaryGrid(channelperfDS, $('#channelperfGrid'), 350, 'Channel', 20, 2, DetailInit);
 
         weeksumDS.read();
         monthsumDS.read();
         channelperfDS.read();
     });
 </script>
+
+<style>
+    .k-grid tbody .k-grid .k-grid-header, .k-detail-cell .k-pager-wrap, .k-detail-cell .k-grid-footer
+    {
+        display: none;
+    }
+    td.k-detail-cell > div.k-grid
+    {
+        border: 1px solid black;
+    }
+</style>
